--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -1,50 +1,42 @@
 source "https://rubygems.org"
 
-# Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
-gem "rails", "~> 8.1.1"
-# Use postgresql as the database for Active Record
-gem "pg", "~> 1.1"
-# Use the Puma web server [https://github.com/puma/puma]
-gem "puma", ">= 5.0"
-# Build JSON APIs with ease [https://github.com/rails/jbuilder]
-# gem "jbuilder"
+ruby "3.4.7"
 
-# Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
-# gem "bcrypt", "~> 3.1.7"
+# Core Rails
+gem "rails", "~> 8.1"
+gem "pg", "~> 1.5"     # PostgreSQL adapter
+gem "puma", "~> 6.0"   # Web server
+gem "bootsnap", ">= 1.4.0", require: false
 
-# Windows does not include zoneinfo files, so bundle the tzinfo-data gem
-gem "tzinfo-data", platforms: %i[ windows jruby ]
+# Authentication & Authorization
+gem "bcrypt", "~> 3.1.20"  # Password hashing
+gem "jwt", "~> 2.8"        # JSON Web Tokens
 
-# Use the database-backed adapters for Rails.cache, Active Job, and Action Cable
-gem "solid_cache"
-gem "solid_queue"
-gem "solid_cable"
+# Background Jobs
+gem "sidekiq", "~> 8.0"
+gem "redis", "~> 5.0"
 
-# Reduces boot times through caching; required in config/boot.rb
-gem "bootsnap", require: false
+# API & Serialization
+gem "jsonapi-serializer", "~> 2.2"  # JSON API formatting
+gem "rack-cors", "~> 2.0"           # CORS handling
 
-# Deploy this application anywhere as a Docker container [https://kamal-deploy.org]
-gem "kamal", require: false
-
-# Add HTTP asset caching/compression and X-Sendfile acceleration to Puma [https://github.com/basecamp/thruster/]
-gem "thruster", require: false
-
-# Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
-gem "image_processing", "~> 1.2"
-
-# Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin Ajax possible
-gem "rack-cors"
+# File Uploads
+gem "aws-sdk-s3", "~> 1.140"  # S3 integration
+gem "image_processing", "~> 1.12"  # Image resizing
 
 group :development, :test do
-  # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
-  gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
+  gem "debug", platforms: %i[ mri windows ]
+  gem "rspec-rails", "~> 6.1"
+  gem "factory_bot_rails", "~> 6.4"
+  gem "faker", "~> 3.2"
+end
 
-  # Audits gems for known security defects (use config/bundler-audit.yml to ignore issues)
-  gem "bundler-audit", require: false
+group :development do
+  # Use a fork/branch that supports ActiveRecord 8.x until upstream releases.
+  gem "annotate", git: "https://github.com/andynu/annotate_models.git", branch: "rails-8-0"
+end
 
-  # Static analysis for security vulnerabilities [https://brakemanscanner.org/]
-  gem "brakeman", require: false
-
-  # Omakase Ruby styling [https://github.com/rails/rubocop-rails-omakase/]
-  gem "rubocop-rails-omakase", require: false
+group :test do
+  gem "shoulda-matchers", "~> 6.0"
+  gem "database_cleaner-active_record", "~> 2.1"
 end
